changes to poets to update the hours and some issues with spacing. still waiting on the new pdf doc.

--- a/source/stylesheet.css
+++ b/source/stylesheet.css
@@ -62,7 +62,27 @@ a>img {
     height: auto;
 }
 
-.groom-time {
+.operation-hrs {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 50%;
+    margin: 1em auto;
+}
+
+.groom-hrs > h2,
+.daycare-hrs > h2 {
+    font-size: 3vw;
+    margin-bottom: 0;
+}
+
+.groom-hrs > p,
+.daycare-hrs > p {
+    font-size: 2vw;
+    margin: 0;
+}
+
+/*.groom-time {
     display: inline-block;
     font-size: 5vw;
     font-family: open_sansregular;
@@ -77,7 +97,7 @@ a>img {
     font-family: open_sansregular;
     margin: 0 auto;
     text-align: center;
-}
+}*/
 
 td {
     font-family: open_sansregular;
@@ -184,7 +204,7 @@ div > p {
 }
 
 aside {
-    width: auto;
+    width: 30%;
     height: auto;
     float: right;
 }
